// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить меню для активного оффера cars 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=cars&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="print-offer"
    metrika="sales,clicks,print-offer"
    target="_blank"
    url="link/offer-print/?category=cars&sale_id="
  >
    Лист продажи
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для активного оффера moto 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=moto&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для забаненного оффера 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=CARS&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="support-chat"
    metrika="support_chat_open"
    onClick={[Function]}
  >
    Написать в поддержку
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для забаненного оффера cars, который нельзя редактировать 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="support-chat"
    metrika="support_chat_open"
    onClick={[Function]}
  >
    Написать в поддержку
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для забаненного юзера 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=CARS&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="support-chat"
    metrika="support_chat_open"
    onClick={[Function]}
  >
    Написать в поддержку
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для неактивного оффера 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=CARS&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="delete"
    metrika="clicks,archive"
    onClick={[Function]}
  >
    Удалить
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для протухшего оффера 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=CARS&section=&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="delete"
    metrika="clicks,archive"
    onClick={[Function]}
  >
    Удалить
  </Link>
</Fragment>
`;

exports[`драфт объявления правильно формирует ссылки 1`] = `
<Fragment>
  <Link
    className="SalesItemFoldedMenu_link"
    key="open-draft"
    metrika="draft_in_lk,click"
    target="_blank"
    url="link/form/?category=moto&section=used&form_type=add&from_lk=true"
  >
    Продолжить заполнение
  </Link>
  <Link
    className="SalesItemFoldedMenu_link"
    key="delete-draft"
    onClick={[Function]}
  >
    Удалить
  </Link>
</Fragment>
`;
